[package]
name = "api-shuttle-dp"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.35.2"
shuttle-runtime = "0.35.2"
shuttle-shared-db = { version = "0.35.2", features = ["postgres"] }
sqlx = { version = "0.7.3", default-features = false, features = [
    "runtime-tokio-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
tokio = "1.26.0"
tracing = "0.1.40"
api-lib = { path = "../lib" }
